--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                     <h3>National Emergency Services</h3>
                     <p>999</p>
                     <p>সার্বজনীন</p>
+                    <div class="flex gap-6">
+                        <button class="bg-[#5c5c5c] text-white px-6 py-1 rounded-xl"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
 
                 </div>
                 <div>
@@ -58,6 +62,10 @@
                     <h3>National Emergency Services</h3>
                     <p>999</p>
                     <p>সার্বজনীন</p>
+                    <div class="flex gap-6">
+                        <button class="bg-[#5c5c5c] text-white px-6 py-1 rounded-xl"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
 
                 </div>
                 <div>
@@ -68,6 +76,10 @@
                     <h3>National Emergency Services</h3>
                     <p>999</p>
                     <p>সার্বজনীন</p>
+                    <div class="flex gap-6">
+                        <button class="bg-[#5c5c5c] text-white px-6 py-1 rounded-xl"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
 
                 </div>
                 <div>
@@ -78,6 +90,10 @@
                     <h3>National Emergency Services</h3>
                     <p>999</p>
                     <p>সার্বজনীন</p>
+                    <div class="flex gap-6">
+                        <button class="bg-[#5c5c5c] text-white px-6 py-1 rounded-xl"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
 
                 </div>
                 <div>
@@ -88,6 +104,10 @@
                     <h3>National Emergency Services</h3>
                     <p>999</p>
                     <p>সার্বজনীন</p>
+                    <div class="flex gap-6">
+                        <button class="bg-[#5c5c5c] text-white px-6 py-1 rounded-xl"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
 
                 </div>
                 <div>
@@ -98,6 +118,10 @@
                     <h3>National Emergency Services</h3>
                     <p>999</p>
                     <p>সার্বজনীন</p>
+                    <div class="flex gap-6">
+                        <button class="bg-[#5c5c5c] text-white px-6 py-1 rounded-xl"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
 
                 </div>
                 <div>
@@ -108,6 +132,10 @@
                     <h3>National Emergency Services</h3>
                     <p>999</p>
                     <p>সার্বজনীন</p>
+                    <div class="flex gap-6">
+                        <button class="bg-[#5c5c5c] text-white px-6 py-1 rounded-xl"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
 
                 </div>
                 <div>
@@ -118,6 +146,10 @@
                     <h3>National Emergency Services</h3>
                     <p>999</p>
                     <p>সার্বজনীন</p>
+                    <div class="flex gap-6">
+                        <button class="bg-[#5c5c5c] text-white px-6 py-1 rounded-xl"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
 
                 </div>
                 <div>
@@ -128,14 +160,19 @@
                     <h3>National Emergency Services</h3>
                     <p>999</p>
                     <p>সার্বজনীন</p>
+                    <div class="flex gap-6">
+                        <button class="bg-[#5c5c5c] text-white px-6 py-1 rounded-xl"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
 
                 </div>
             </div>
-            <div class="flex justify-between p-8">
+            <div class="flex gap-8 p-8">
                 <div class="">
                     <i class="fa-solid fa-clock-rotate-left"></i><span> Call History</span>
-                    <button class="bg-[#00A63E] text-white px-4 py-2 rounded-3xl">Clear</button>
+                   <button class="bg-[#00A63E] text-white px-4 py-2 rounded-3xl">Clear</button>
                 </div>
+                 
                
             </div>
         </div>
