--- a/index.html
+++ b/index.html
@@ -43,15 +43,18 @@
 
                 <div class="bg-white p-6 rounded-xl shadow-lg w-full">
                     <div class="flex justify-between">
-                        <img class="w-6 pb-4" src="assets/emergency.png" alt=""><i class="fa-regular fa-heart pr-6 text-[20px]"></i>
+                        <img class="w-6 pb-4" src="assets/emergency.png" alt=""><i class=" heart-icon fa-regular fa-heart pr-6 text-[20px]"></i>
                     </div>
-                    <h2 class="font-bold">জরুরি সেবা ডিরেক্টরি</h2>
-                    <h3 class="text-[#5c5c5cfa] py-2 ">National Emergency Services</h3>
-                    <h2 class="font-bold text-lg">999</h2>
+                    <div class="content">
+                        <h2 class="font-bold">জরুরি সেবা ডিরেক্টরি</h2>
+                    <h3 class="title text-[#5c5c5cfa] py-2 ">National Emergency Services</h3>
+                    <h2 class="number font-bold text-lg">999</h2>
                     <p class="bg-[#5c5c5c0f] text-[#5c5c5cfa]  w-24 p-2 rounded-3xl">সার্বজনীন</p>
+                    </div>
+                    
                     <div class="flex justify-between gap-6 pt-4 w-full ">
-                        <button class="bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
-                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                        <button class=" btn-copy  bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class=" btn-call  bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
                     </div>
 
                 </div>
@@ -59,113 +62,130 @@
 
                 <div class="bg-white p-6 rounded-xl shadow-lg">
                     <div class="flex justify-between">
-                        <img class="w-6 pb-4" src="assets/police.png" alt=""><i class="fa-regular fa-heart text-[20px]"></i>
+                        <img class="w-6 pb-4" src="assets/police.png" alt=""><i class="heart-icon fa-regular fa-heart text-[20px]"></i>
                     </div>
-                    <h2 class="font-bold">পুলিশ</h2>
-                    <h3 class="text-[#5c5c5cfa] py-2 ">Police</h3>
-                    <h2 class="font-bold text-lg">999</h2>
+                    <div class="content">
+                        <h2 class="font-bold">পুলিশ</h2>
+                    <h3 class="title text-[#5c5c5cfa] py-2 ">Police</h3>
+                    <h2 class="number font-bold text-lg">999</h2>
                     <p class="bg-[#5c5c5c0f] text-[#5c5c5cfa]  w-24 p-2 rounded-3xl">পুলিশ</p>
+                    </div>
+                    
                     <div class="flex justify-between gap-6 pt-4 w-full ">
-                        <button class="bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
-                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn-copy bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class=" btn-call bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
                     </div>
 
                 </div>
                 <div class="bg-white p-6 rounded-xl shadow-lg w-full">
                     <div class="flex justify-between">
-                        <img class="w-6 pb-4" src="assets/fire-service.png" alt=""><i class="fa-regular fa-heart pr-6 text-[20px]"></i>
+                        <img class="w-6 pb-4" src="assets/fire-service.png" alt=""><i class=" heart-icon fa-regular fa-heart pr-6 text-[20px]"></i>
                     </div>
-                    <h2 class="font-bold">ফায়ার সার্ভিস</h2>
-                    <h3 class="text-[#5c5c5cfa] py-2 ">Fire Service</h3>
-                    <h2 class="font-bold text-lg">999</h2>
+                    <div class="content">
+                        <h2 class="font-bold">ফায়ার সার্ভিস</h2>
+                    <h3 class="title text-[#5c5c5cfa] py-2 ">Fire Service</h3>
+                    <h2 class="number font-bold text-lg">999</h2>
                     <p class="bg-[#5c5c5c0f] text-[#5c5c5cfa]  w-24 p-2 rounded-3xl">ফায়ার</p>
+                    </div>
                     <div class="flex justify-between gap-6 pt-4 w-full ">
-                        <button class="bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
-                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn-copy bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class=" btn-call bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
                     </div>
 
                 </div>
                 <div class="bg-white p-6 rounded-xl shadow-lg w-full">
                     <div class="flex justify-between">
-                        <img class="w-6 pb-4" src="assets/ambulance.png" alt=""><i class="fa-regular fa-heart pr-6 text-[20px]"></i>
+                        <img class="w-6 pb-4" src="assets/ambulance.png" alt=""><i class=" heart-icon fa-regular fa-heart pr-6 text-[20px]"></i>
                     </div>
-                    <h2 class="font-bold">অ্যাম্বুলেন্স</h2>
-                    <h3 class="text-[#5c5c5cfa] py-2 ">Ambulance</h3>
-                    <h2 class="font-bold text-lg">1994-999999</h2>
+                    <div>
+                        <h2 class="font-bold">অ্যাম্বুলেন্স</h2>
+                    <h3 class="title text-[#5c5c5cfa] py-2 ">Ambulance</h3>
+                    <h2 class="number font-bold text-lg">1994-999999</h2>
                     <p class="bg-[#5c5c5c0f] text-[#5c5c5cfa]  w-24 p-2 rounded-3xl">স্বাস্থ্য</p>
+                    </div>
                     <div class="flex justify-between gap-6 pt-4 w-full ">
-                        <button class="bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
-                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn-copy bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class=" btn-call bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
                     </div>
 
                 </div>
                 <div class="bg-white p-6 rounded-xl shadow-lg w-full">
                     <div class="flex justify-between">
-                        <img class="w-6 pb-4" src="assets/logo-dark.png" alt=""><i class="fa-regular fa-heart pr-6 text-[20px]"></i>
+                        <img class="w-6 pb-4" src="assets/logo-dark.png" alt=""><i class=" heart-icon fa-regular fa-heart pr-6 text-[20px]"></i>
                     </div>
-                    <h2 class="font-bold">নারী ও শিশু সহায়তা</h2>
-                    <h3 class="text-[#5c5c5cfa] py-2 ">Women and Child Support</h3>
-                    <h2 class="font-bold text-lg">109</h2>
+                    <div>
+                        <h2 class="font-bold">নারী ও শিশু সহায়তা</h2>
+                    <h3 class="title text-[#5c5c5cfa] py-2 ">Women and Child Support</h3>
+                    <h2 class="number font-bold text-lg">109</h2>
                     <p class="bg-[#5c5c5c0f] text-[#5c5c5cfa]  w-24 p-2 rounded-3xl">সহায়তা</p>
+                    </div>
                     <div class="flex justify-between gap-6 pt-4 w-full ">
-                        <button class="bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
-                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn-copy bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="btn-call bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
                     </div>
 
                 </div>
                 <div class="bg-white p-6 rounded-xl shadow-lg w-full">
                     <div class="flex justify-between">
-                        <img class="w-6 pb-4" src="assets/Anit-Corruption.png" alt=""><i class="fa-regular fa-heart pr-6 text-[20px]"></i>
+                        <img class="w-6 pb-4" src="assets/Anit-Corruption.png" alt=""><i class=" heart-icon fa-regular fa-heart pr-6 text-[20px]"></i>
                     </div>
-                    <h2 class="font-bold">দুদক</h2>
-                    <h3 class="text-[#5c5c5cfa] py-2 ">Anit-corruption Commission</h3>
-                    <h2 class="font-bold text-lg">106</h2>
+                    <div>
+                        <h2 class="font-bold">দুদক</h2>
+                    <h3 class="title text-[#5c5c5cfa] py-2 ">Anit-corruption Commission</h3>
+                    <h2 class="number font-bold text-lg">106</h2>
                     <p class="bg-[#5c5c5c0f] text-[#5c5c5cfa]  w-24 p-2 rounded-3xl">সরকারী</p>
+                    </div>
                     <div class="flex justify-between gap-6 pt-4 w-full ">
-                        <button class="bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
-                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn-copy bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="btn-call bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
                     </div>
 
                 </div>
                 <div class="bg-white p-6 rounded-xl shadow-lg w-full">
                     <div class="flex justify-between">
-                        <img class="w-6 pb-4" src="assets/eletricity.webp" alt=""><i class="fa-regular fa-heart pr-6 text-[20px]"></i>
+                        <img class="w-6 pb-4" src="assets/eletricity.webp" alt=""><i class=" heart-icon fa-regular fa-heart pr-6 text-[20px]"></i>
                     </div>
-                    <h2 class="font-bold">বিদ্যুৎ বিভ্রাট</h2>
-                    <h3 class="text-[#5c5c5cfa] py-2 ">Power Outage</h3>
-                    <h2 class="font-bold text-lg">16216</h2>
+                    <div>
+                        <h2 class="font-bold">বিদ্যুৎ বিভ্রাট</h2>
+                    <h3 class="title text-[#5c5c5cfa] py-2 ">Power Outage</h3>
+                    <h2 class="number font-bold text-lg">16216</h2>
                     <p class="bg-[#5c5c5c0f] text-[#5c5c5cfa]  w-24 p-2 rounded-3xl">বিদ্যুৎ</p>
+                    </div>
                     <div class="flex justify-between gap-6 pt-4 w-full ">
-                        <button class="bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
-                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn-copy bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="btn-call bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
                     </div>
 
                 </div>
                 <div class="bg-white p-6 rounded-xl shadow-lg w-full">
                     <div class="flex justify-between">
-                        <img class="w-6 pb-4" src="assets/brac.png" alt=""><i class="fa-regular fa-heart pr-6 text-[20px]"></i>
+                        <img class="w-6 pb-4" src="assets/brac.png" alt=""><i class=" heart-icon fa-regular fa-heart pr-6 text-[20px]"></i>
                     </div>
-                    <h2 class="font-bold">ব্র্যাক</h2>
-                    <h3 class="text-[#5c5c5cfa] py-2 ">BRAC</h3>
-                    <h2 class="font-bold text-lg">16445</h2>
+                    <div>
+                        <h2 class="font-bold">ব্র্যাক</h2>
+                    <h3 class="title text-[#5c5c5cfa] py-2 ">BRAC</h3>
+                    <h2 class="number font-bold text-lg">16445</h2>
                     <p class="bg-[#5c5c5c0f] text-[#5c5c5cfa]  w-24 p-2 rounded-3xl">এনজিও</p>
+                    </div>
                     <div class="flex justify-between gap-6 pt-4 w-full ">
-                        <button class="bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
-                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn-copy bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="btn-call bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
                     </div>
 
                 </div>
                 <div class="bg-white p-6 rounded-xl shadow-lg w-full">
                     <div class="flex justify-between">
-                        <img class="w-6 pb-4" src="assets/Bangladesh-Railway.png" alt=""><i class="fa-regular fa-heart pr-6 text-[20px]"></i>
+                        <img class="w-6 pb-4" src="assets/Bangladesh-Railway.png" alt=""><i class=" heart-icon fa-regular fa-heart pr-6 text-[20px]"></i>
                     </div>
-                    <h2 class="font-bold">বাংলাদেশ রেলওয়ে</h2>
-                    <h3 class="text-[#5c5c5cfa] py-2 ">Bangladesh Railway</h3>
-                    <h2 class="font-bold text-lg">163</h2>
+                    <div>
+                        <h2 class="font-bold">বাংলাদেশ রেলওয়ে</h2>
+                    <h3 class="title text-[#5c5c5cfa] py-2 ">Bangladesh Railway</h3>
+                    <h2 class="number font-bold text-lg">163</h2>
                     <p class="bg-[#5c5c5c0f] text-[#5c5c5cfa]  w-24 p-2 rounded-3xl">পরিবহন</p>
+                    </div>
                     <div class="flex justify-between gap-6 pt-4 w-full ">
-                        <button class="bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
-                        <button class="bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn-copy bg-[#00000008] text-[#5c5c5cfa] px-5 py-1 rounded-xl shadow-lg"> <i class="fa-regular fa-copy"></i> Copy</button>
+                        <button class="btn-call bg-[#00A63E] text-white px-6 py-1 rounded-xl"> <i class="fa-solid fa-phone"></i> Call</button>
                     </div>
 
                 </div>
@@ -188,5 +208,7 @@
         </div>
     </section>
 
+
+    <script src="js-file/script.js"></script>
 </body>
 </html>
